--- a/web/ressources/css/app.css
+++ b/web/ressources/css/app.css
@@ -37,3 +37,65 @@ body,html{
   right: 15px;
   left: 15px;
 }
+
+.toggle {
+  overflow: hidden;
+  display: inline-block;
+  width: 8em;
+  background: #222;
+  padding: 0.125em;
+  cursor: pointer;
+  }
+  .toggle input {
+    position: absolute;
+    visibility: hidden;
+    }
+  .toggle span {
+    position: relative;
+    left: 0%;
+    display: block;
+    text-transform: uppercase;
+    text-align: center;
+    /**
+     * Holo doesn't have any transition, but
+     * it's added here for demo purposes
+     */
+    -webkit-transition: left 200ms ease-out;
+       -moz-transition: left 200ms ease-out;
+         -o-transition: left 200ms ease-out;
+            transition: left 200ms ease-out;
+    }
+    .toggle :checked + span {
+      left: 50%;
+      }
+
+  /* Default unchecked state */
+  .toggle span:before {
+    content: attr(data-unchecked);
+    display: block;
+    width: 50%;
+    background-color: #525252;
+    border-radius: 0.15em;
+    box-shadow: inset 0 0.1em 0 rgba(255, 255, 255, 0.3);
+    color: #b3b3b3;
+    }
+
+  /* Checked state */
+  .toggle :checked + span:before {
+    content: attr(data-checked);
+    background-color: #0099CC;
+    }
+
+
+/* Base styles */
+html {
+  font: 100%/1.5 'Roboto', sans-serif;
+  padding-top: 3em;
+  background-color: #0e1012;
+  color: #b3b3b3;
+  text-align: center;
+  }
+
+h1 {
+  font-weight: 100;
+  }
